--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
 # change the name of this file to .env
 # and fill in the values for the variables below
 # with your own values
-NEXT_PUBLIC_CANDY_MACHINE_ID=5e11jHeNvVtQ4CihP8sSbFV7AnNJWKvRYMfvkgqjAoG4
-NEXT_PUBLIC_RPC_ENDPOINT=https://api.devnet.solana.com
+NEXT_PUBLIC_CANDY_MACHINE_ID=ANDCDDwyYXFUPzL4vok41Wfs8vzicm9sQEpCNjVMmzZa
+NEXT_PUBLIC_RPC_ENDPOINT=https://solana-devnet.g.alchemy.com/v2/R3zwAhaFB96B0ARpiVdIqKC4R229Cpxs
